class Items

  MENU = <<DISHES
1. Burrito  £ 5.60
2. Salad    £ 3.80
DISHES
  def see
    puts MENU
  end
end
