@startuml

class Menu {
    +display_menu(menu_category)
}

class Order {
    +select_item(menu_category, item_name)
    +place_order(menu_category, item_name, quantity)
    +total()
}

class Item {
    name
    price
}

class Entry {
    quantity
}

class Messenger {
    handles_Twilio
}

interface Messenger {
    send_message(message)
}

Order *..> Menu :menu
Order *--> "*" Entry : entries
Entry *--> Item : item
Order *--> Messenger

@enduml